contrib/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roundtrip
spec:
  ports:
  - name: web
    port: 8080
    targetPort: 8080
  selector:
    app: roundtrip
  type: ClusterIP
