contrib/kubernetes/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: roundtrip
spec:
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: roundtrip
    weight: 100
  wildcardPolicy: None
